src/test/deca/context/invalid/acces_champ_sur_null.deca
// Description :
// acces a attribut de ull or null n est rien donc erreur

// Resultats :
// Echec

{
    print(null.numero);
}